# Software-Engineering

./: presentatie.docx
BVAEquivalence/src/: DateClass.java  Main.java  Triangle.java
BVAEquivalence/tests/: DateClassTest.java  TriangleTest.java
Belbin/: BelbinTest.docx
Opdracht 2/: CMakeLists.txt  main.cpp
Opdracht 2/Tests/: Calculator.cpp  Calculator.h  CalculatorTests.cpp
Opdracht2a/: CMakeLists.txt  main.cpp
Opdracht2a/Tests/: Calculator.cpp  Calculator.h  CalculatorTests.cpp
